--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "format": "prettier --write .",
     "lint": "eslint . --ext ts --ext tsx --ext js --quiet",
     "lint-staged": "lint-staged --config lint-staged.js",
-    "lint-all": "yarn lint && yarn type-check",
+    "lint-all": "yarn lint",
     "analyze": "ANALYZE=true yarn build"
   },
   "dependencies": {
