--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@blockworks-foundation/mango-client": "^3.6.12",
+    "@download/blockies": "^1.0.3",
     "@headlessui/react": "^0.0.0-insiders.2dbc38c",
     "@heroicons/react": "^1.0.0",
     "@jup-ag/react-hook": "^1.0.0-beta.22",
@@ -30,6 +31,8 @@
     "@solana/wallet-adapter-wallets": "^0.16.1",
     "@solflare-wallet/pfp": "^0.0.6",
     "@tippyjs/react": "^4.2.5",
+    "@walletconnect/web3-provider": "^1.6.6",
+    "axios": "^0.24.0",
     "big.js": "^6.1.1",
     "bignumber.js": "^9.0.2",
     "bn.js": "^5.1.0",
@@ -37,6 +40,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "dayjs": "^1.10.4",
+    "ethers": "^5.4.7",
     "export-to-csv": "^0.2.1",
     "html2canvas": "^1.4.1",
     "immer": "^9.0.1",
@@ -49,6 +53,7 @@
     "rc-slider": "^9.7.5",
     "react": "^17.0.2",
     "react-cool-dimensions": "^2.0.7",
+    "react-device-detect": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-grid-layout": "^1.3.3",
     "react-horizontal-scrolling-menu": "^2.8.2",
@@ -60,16 +65,12 @@
     "react-virtualized-auto-sizer": "^1.0.6",
     "react-window": "^1.8.6",
     "recharts": "^2.1.9",
-    "zustand": "^3.7.0",
-    "web3": "^1.6.1",
-    "@download/blockies": "^1.0.3",
-    "web3modal": "^1.9.4",
     "tiny-emitter": "^2.1.0",
-    "ethers": "^5.4.7",
-    "@walletconnect/web3-provider": "^1.6.6",
+    "use-deep-compare-effect": "^1.8.1",
+    "web3": "^1.6.1",
+    "web3modal": "^1.9.4",
     "zksync-web3": "^0.7.8",
-    "axios": "^0.24.0",
-    "react-device-detect": "^2.2.2"
+    "zustand": "^3.7.0"
   },
   "peerDependencies": {
     "@project-serum/serum": ">=0.13.55",
